# anfegu_sample_rust

./: Cargo.toml  README.md  input.txt
anfegu_sample_feature_bin/: Cargo.toml
anfegu_sample_feature_bin/src/: main.rs
anfegu_sample_feature_lib/: Cargo.toml
anfegu_sample_feature_lib/src/: blockchain.rs  encryption.rs  lib.rs
